# AI_Augmented_Data_Engineering_Platform

./: .gitignore  README.md
module 1/ai_sql_generator/: DESIGN.md  app.py
module 2/ai_csv_comparison_platform/: README.md  requirements.txt
module 3/langgraph_agents_prompt_injection/: README.md  (+2 more)
module_2/ai_csv_comparison_platform/: pyproject.toml
module_2/ai_csv_comparison_platform/examples/: target_customers.csv
module_2/ai_csv_comparison_platform/reports/: report.html
module_2/ai_csv_comparison_platform/src/csv_compare/: cli.py  reporting.py  similarity.py
module_2/ai_csv_comparison_platform/tests/: test_comparator.py
module_4/legacy_pipeline_modernization/: README.md  pyproject.toml
module_4/legacy_pipeline_modernization/docs/: architecture.md
module_4/legacy_pipeline_modernization/examples/legacy_pipeline/etl/: load_customers.py
module_4/legacy_pipeline_modernization/examples/legacy_pipeline/sql/: transform_orders.sql
module_4/legacy_pipeline_modernization/outputs/demo/: confidence_report.json  lineage.json
module_4/legacy_pipeline_modernization/prompts/: lineage_gap_review_v1.md  migration_planner_v1.md
module_4/legacy_pipeline_modernization/src/legacy_modernizer/: lineage.py  models.py
module_4/legacy_pipeline_modernization/src/legacy_modernizer/analyzers/: python_analyzer.py
module_4/legacy_pipeline_modernization/src/legacy_modernizer/migration/: dbt_prefect.py
module_4/legacy_pipeline_modernization/src/legacy_modernizer/renderers/: mermaid.py
module_4/legacy_pipeline_modernization/tests/: test_cli.py  test_project_analyzer.py
(+62 files in other folders)
