[project]
name = "ai-csv-comparison-platform"
version = "0.1.0"
description = "AI-augmented CSV comparison tool with fuzzy, heuristic, and embedding-based column matching."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "jinja2>=3.1.0"
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.7.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
csv-compare = "csv_compare.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
